--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -175,3 +175,13 @@ footer {
 #desserts {
   animation: progress 6s;
 }
+
+/* coche qui tourne*/
+@keyframes rotate {
+  0% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
